kubernetes/kpt/transmission/resources/transmission.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: transmission
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      name: transmission
      labels:
        app: transmission
    spec:
      dnsPolicy: Default
      dnsConfig:
        nameservers:
          - "8.8.8.8"
      containers:
      - name: transmission
        image: haugene/transmission-openvpn:latest
        imagePullPolicy: Always
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
        volumeMounts:
        - name: downloads
          mountPath: /downloads
        - name: config
          mountPath: /data
        ports:
        - name: web
          containerPort: 9091
          protocol: TCP
      volumes: 
      - name: downloads
        nfs:
          server: ceph-nfs.home
          path: /cephfs/media/downloads
      - name: config
        persistentVolumeClaim:
            claimName: transmission-config
