kubernetes/kpt/transmission/resources/transmission.ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  name: transmission
  namespace: transmission
spec:
  rules:
  - host: transmission.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: transmission
            port: 
              number: 80
